# kdev-bazaar

./: CMakeLists.txt  README.md  kdev-bazaar.kdev4
src/: CMakeLists.txt  bazaarplugin.cpp  bazaarplugin.h  bzrannotatejob.cpp  bzrannotatejob.h  bzrannotatetask.cpp  bzrannotatetask.h  copyjob.cpp  copyjob.h  diffjob.cpp  diffjob.h  importmetadatawidget.cpp  kdevbazaar.desktop  kdevbazaar.desktop.cmake  utilities.cpp  utilities.h
